@@ -4,13 +4,11 @@ package ru.danilgordienko.film_storage.service;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.amqp.rabbit.AsyncRabbitTemplate;
+import org.springframework.amqp.AmqpException;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
-import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
-import org.springframework.util.concurrent.ListenableFuture;
-import org.springframework.util.concurrent.ListenableFutureCallback;
 import ru.danilgordienko.film_storage.DTO.MoviesDto.MovieDetailsDto;
 import ru.danilgordienko.film_storage.DTO.MoviesDto.MovieDto;
 import ru.danilgordienko.film_storage.DTO.MoviesDto.MovieListDto;
@@ -37,15 +35,34 @@ public class MovieService {
     private final MovieMapping  movieMapping;
     private final MovieSearchRepository movieSearchRepository;
     private final RabbitTemplate rabbitTemplate;
+    private final int size = 20;
 
     // Получение всех фильмов из базы данных
     public List<MovieListDto> getAllMovies(){
         log.info("Получение всех фильмов из базы данных");
         var movies = movieRepository.findAll().stream()
                 .map(movieMapping::toMovieListDto)
-                .collect(Collectors.toList());
+                .toList();
         log.info("Найдено {} фильмов", movies.size());
         return movies;
+    }
+
+    // Получение всех фильмов из базы данных
+    public Page<MovieListDto> getMoviesPage(int page){
+        log.info("Получение всех фильмов из базы данных");
+        Pageable pageable = PageRequest.of(page, size, Sort.by("title").ascending());
+        Page<Movie> moviePage = movieRepository.findAll(pageable);
+
+        // Преобразуем содержимое страницы
+        List<MovieListDto> dtoList = moviePage.getContent()
+                .stream()
+                .map(movieMapping::toMovieListDto)
+                .toList();
+
+        // Возвращаем новую страницу с теми же параметрами
+        Page<MovieListDto> dtoPage = new PageImpl<>(dtoList, pageable, moviePage.getTotalElements());
+        log.info("Найдено {} фильмов", dtoList.size());
+        return dtoPage;
     }
 
     // Получение всех жанров из базы данных
@@ -81,6 +98,24 @@ public class MovieService {
         return movies;
     }
 
+    //Поиск фильмов по запросу query
+    public Page<MovieListDto> searchMoviesPageByTitle(String query,  int page) {
+        log.info("Поиск фильмов в Elasticsearch по названию: {}", query);
+        Pageable pageable = PageRequest.of(page, size, Sort.by("title").ascending());
+        var searchResults = movieSearchRepository.findByTitleContaining(query, pageable);
+
+        // Преобразуем содержимое страницы
+        List<MovieListDto> dtoList = searchResults.getContent()
+                .stream()
+                .map(movieMapping::toMovieListDto)
+                .toList();
+
+        // Возвращаем новую страницу с теми же параметрами
+        Page<MovieListDto> dtoPage = new PageImpl<>(dtoList, pageable, searchResults.getTotalElements());
+        log.info("Найдено {} фильмов", dtoList.size());
+        return dtoPage;
+    }
+
     // получение постера к фильму(отпправляет запрос брокеру и ждет ответа)
     public byte[] getPoster(Long id) {
         return movieRepository.findById(id)
@@ -109,16 +144,56 @@ public class MovieService {
         }
     }
 
-    // Заполнение базы данных недавно вышедшими фильмами
+    private Object getRabbitResponse(String exchange, String routingKey, Object body) {
+        log.info("Запрос к RabbitMQ с телом: {}", body.toString());
+        try {
+            return rabbitTemplate.convertSendAndReceive(
+                    exchange,
+                    routingKey,
+                    body
+            );
+        } catch (AmqpException e) {
+            log.error("Ошибка при работе с RabbitMQ: {}", e.getMessage(), e);
+            return null;
+        } catch (ClassCastException e) {
+            log.error("Ошибка преобразования ответа: {}", e.getMessage(), e);
+            return null;
+        }
+    }
+
+    // получение постера к фильму(отпправляет запрос брокеру и ждет ответа)
     @Transactional
-    @RabbitListener(queues = "movies.queue")
-    public void populateMovies(List<MovieDto> movies) {
-        log.info("Получение недавно вышедших фильмов");
-        if (movies.isEmpty()) {
-            log.warn("Фильмы не получены. Не удалось пополнить новые фильмы.");
-            return;
+    public boolean getPopularMovies() {
+
+        int page = 1;
+        Object response = getRabbitResponse(
+                RabbitConfig.EXCHANGE,
+                RabbitConfig.ROUTING_KEY_PAGE,
+                page
+        );
+
+        if (response == null) {
+            log.warn("Ответ от сервиса фильмов не получен");
+            return false;
         }
 
+        List<MovieDto> movies;
+        try {
+            movies = (List<MovieDto>) response;
+        } catch (ClassCastException e) {
+            log.error("Ошибка приведения типов: {}", e.getMessage());
+            return false;
+        }
+
+        log.info("Получено {} фильмов", movies.size());
+        saveReceivedMovies(movies);
+        return true;
+    }
+
+
+
+    @Transactional
+    protected void saveReceivedMovies(List<MovieDto> movies) {
         var mappedMovies = movies.stream().map(movieMapping::toMovie).toList();
         // заменяем пришедшие жанры на уже созданые в бд
         attachGenresToMovies(mappedMovies);
@@ -128,6 +203,14 @@ public class MovieService {
         saveMoviesES(mappedMovies);
 
         log.info("Сохранено {} фильмов", movies.size());
+    }
+
+    // Заполнение базы данных недавно вышедшими фильмами
+    @Transactional
+    @RabbitListener(queues = "movies.queue")
+    public void populateMovies(List<MovieDto> movies) {
+        log.info("Получение недавно вышедших фильмов");
+        saveReceivedMovies(movies);
     }
 
     // сохранение фильмов в бд
